
              pamendian: fix bogus "sample exceeds maxval" failure.
              Introduced in Netpbm 10.66 (March 2014).

              ppmtoilbm: Fix wild memory references and hangs with -map .
              Introduced in Netpbm 9.12 (March 2001).

              pgmtexture: Fix incorrect output.  Always broken.  (Program was
              added in primordial Netpbm in 1991).
              
              Remove Floyd-Steinberg dithering functions (ppm_fs_*) from
              libnetpbm (libppmfloyd).  No longer used.  Floyd-Steinberg
              dithering logic can be found in pnmremap.  libppmfloyd
              was previously used by ppmtoilbm.

21.12.27 BJH  Release 10.97.00

              Add pbnnoise.

              pnmpad: Use -halign with -mwidth and default to centering the
              image instead of left-justifying when no other padding is being
              added.  Same with -mheight, -valign, and top-justifying.

              xwdtopnm: Add ability to process bit depth 32.

              pgmtoppm: Add -black, -white.

              ppmpat: Add -mesh.

              pampaintspill: Add -near.  Thanks Scott Pakin.

              pamtogif: Fix bug: doesn't ignore the input alpha mask when user
              specified -transparent.  Broken in Netpbm 10.37 (December 2006).

              palmtopnm: Fix bug: fails with PackBits input on platform with
              default unsigned char, such as ppc64.  Always broken.  (Ability
              to convert PackBits input was new in Netpbm 10.27 (March 2005).
              
              pamrubber: Fix bug: random behavior with -quad when you specify
              both points for source or target and the second one is lower in
              the image than the first.  Always broken (Pamrubber was new in
              Netpbm 10.54 (March 2011)).

              sunicontopnm, escp2topbm, mgrtopbm, ybmtopbm, pamcut, pbmpscale,
              pnmcat, pnmpad: Fix arithmetic overrun with ridiculously large